Versione SPAC 2024-12-16